--- a/source/less/blocks/other_goods.less
+++ b/source/less/blocks/other_goods.less
@@ -15,3 +15,14 @@
     font-size: 14px;
     line-height: 14px;
 }
+.other-goods__order {
+    text-align: center;
+    display: block;
+    width:280px;
+    height:40px;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #63a73a;
+}
