--- a/source/less/blocks/other_goods.less
+++ b/source/less/blocks/other_goods.less
@@ -1,28 +1,32 @@
 .other-goods__title {
-    font-size: 24px;
-    line-height: 24px;
+  font-size: 24px;
+  line-height: 24px;
 }
+
 .other-goods__item-title {
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: uppercase;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
 }
+
 .other-goods__link {
   color: #444444;
 }
+
 .other-goods__description {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    line-height: 14px;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
 }
+
 .other-goods__order {
-    text-align: center;
-    display: block;
-    width:280px;
-    height:40px;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-color: #63a73a;
+  text-align: center;
+  display: block;
+  width: 280px;
+  height: 40px;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #63a73a;
 }
