--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "fonts/fonts.less";
 @import "blocks/intro.less";
 @import "blocks/header.less";
+@import "blocks/nav.less";
 @import "blocks/site_list.less";
 @import "blocks/body.less";
 @import "blocks/programs.less";
@@ -13,4 +14,3 @@
 @import "blocks/other_goods.less";
 @import "blocks/gift.less";
 @import "blocks/form.less";
-
