--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -1,26 +1,26 @@
 body {
-    margin: 0;
+  margin: 0;
 
-    font-family: 'Oswald', Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
 
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-    color: #444444;
-    /*text-transform: uppercase;*/
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #444444;
+  /*text-transform: uppercase;*/
 
-    background-color: #ffffff;
-    background-position: top center;
-    background-repeat: no-repeat;
+  background-color: #ffffff;
+  background-position: top center;
+  background-repeat: no-repeat;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
