--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,27 +1,28 @@
 .catalog__slogan {
-    font-size: 36px;
-    line-height: 60px;
+  font-size: 36px;
+  line-height: 60px;
 }
+
 .catalog__title {
-    text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
 }
-.catalog__text{
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-    line-height: 16px;
+
+.catalog__text {
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
 }
+
 .catalog__order {
-    text-align: center;
-    display: block;
-    width:280px;
-    height:40px;
-    background-color:#63a73a;
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
+  text-align: center;
+  display: block;
+  width: 280px;
+  height: 40px;
+  background-color: #63a73a;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
 }
-
-
