--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,10 +1,11 @@
 .contacts__title {
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
 }
+
 .contacts__text {
-   font-family: Arial, sans-serif;
-   font-size: 14px;
-   line-height: 20px;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
 }
