--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .copyright__link {
-   font-family: Arial, sans-serif;
-   font-size: 16px;
-   line-height: 16px;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 16px;
 }
