--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -1,22 +1,24 @@
 .view-more__title {
-    text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
 }
+
 .view-more__text {
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-    line-height: 16px;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
 }
+
 .view-more__button {
-    font-family: 'Oswald', Arial, sans-serif;
-    border: none;
-    text-align: center;
-    display: block;
-    width:280px;
-    height:40px;
-    text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
-    background-color: #f2f2f2;
+  font-family: "Oswald", "Arial", sans-serif;
+  border: none;
+  text-align: center;
+  display: block;
+  width: 280px;
+  height: 40px;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #f2f2f2;
 }
