--- a/source/less/fonts/fonts.less
+++ b/source/less/fonts/fonts.less
@@ -1,13 +1,19 @@
 /* oswald-regular - cyrillic_latin */
 @font-face {
-  font-family: 'Oswald';
+  font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  src: url('..source/fonts/oswald-v17-cyrillic_latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Oswald Regular'), local('Oswald-Regular'),
-       url('..source/fonts/oswald-v17-cyrillic_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('..source/fonts/oswald-v17-cyrillic_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('..source/fonts/oswald-v17-cyrillic_latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('..source/fonts/oswald-v17-cyrillic_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('..source/fonts/oswald-v17-cyrillic_latin-regular.svg#Oswald') format('svg'); /* Legacy iOS */
+  src: url("..source/fonts/oswald-v17-cyrillic_latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: local("Oswald Regular"),
+    local("Oswald-Regular"),
+    url("..source/fonts/oswald-v17-cyrillic_latin-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */
+    url("..source/fonts/oswald-v17-cyrillic_latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */
+    url("..source/fonts/oswald-v17-cyrillic_latin-regular.woff") format("woff"),
+    /* Modern Browsers */
+    url("..source/fonts/oswald-v17-cyrillic_latin-regular.ttf") format("truetype"),
+    /* Safari, Android, iOS */
+    url("..source/fonts/oswald-v17-cyrillic_latin-regular.svg#Oswald") format("svg"); /* Legacy iOS */
 }
