--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -26,3 +26,25 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.catalog__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog__item {
+    background-color: #f2f2f2;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog__item {
+    background-color: #ffffff;
+  }
+}
