--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,4 +1,27 @@
 .header {
   background-color: #ffffff;
   color: #444444;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @tablet-width) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .header__logo {
+    width: 220px;
+  }
+
+  .navigation {
+    width: 500px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .header__logo {
+    width: 245px;
+  }
 }
