--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -2,14 +2,20 @@
   background-color: #63a73a;
   color: #ffffff;
   background-image: url("..index-background-mobile@1x.jpg");
+  width: 320px;
+  margin: 0 auto;
 }
 
 .intro__slogan {
+  margin: 0;
+  padding: 0;
   font-size: 36px;
   line-height: 36px;
 }
 
 .intro__text {
+  margin: 0;
+  padding: 0;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 18px;
@@ -21,4 +27,22 @@
   color: #ffffff;
   font-size: 14px;
   line-height: 18px;
+  display: block;
+  width: 280px;
+  height: 40px;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .intro {
+    background-color: #ffffff;
+    color: #000000;
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .intro {
+    width: 960px;
+  }
 }
