--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,5 @@
 @import "fonts/fonts.less";
+@import "variables.less";
 @import "blocks/intro.less";
 @import "blocks/header.less";
 @import "blocks/nav.less";
