--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,8 +8,11 @@
 @import "blocks/programs.less";
 @import "blocks/about.less";
 @import "blocks/example.less";
+@import "blocks/contacts.less";
+@import "blocks/social.less";
 @import "blocks/slider.less";
 @import "blocks/footer.less";
+@import "blocks/copyright.less";
 @import "blocks/catalog.less";
 @import "blocks/view_more.less";
 @import "blocks/other_goods.less";
