--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -1,11 +1,34 @@
+.about {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .about__title {
   font-size: 36px;
   line-height: 60px;
-  text-transform: uppercase;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .about__description {
+  margin: 0;
   font-family: "Arial", sans-serif;
+  display: block;
+  padding-bottom: 10px;
+}
+
+.about__item {
+  display: flex;
+  flex-direction: row;
+}
+
+.about__image {
+  display: block;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  background-color: #63a73a;
 }
 
 .about__list {
@@ -15,18 +38,76 @@
 }
 
 @media (min-width: @tablet-width) {
+  .about {
+    border-bottom: 1px solid #d9d9d9;
+    padding-right: 90px;
+  }
+
+  .about__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 50px 10px;
+  }
+
   .about__list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  .about__item:nth-child(1) {
+    background-image: url("/img/1.png");
+    background-position: 70% 30%;
+    background-repeat: no-repeat;
+  }
+
+  .about__item:nth-child(2) {
+    background-image: url("/img/2.png");
+    background-position: 70% 30%;
+    background-repeat: no-repeat;
+  }
+
+  .about__item:nth-child(3) {
+    background-image: url("/img/3.png");
+    background-position: 70% 30%;
+    background-repeat: no-repeat;
+  }
+
+  .about__item:nth-child(4) {
+    background-image: url("/img/4.png");
+    background-position: 70% 30%;
+    background-repeat: no-repeat;
   }
 
   .about__item {
-    width: 355px;
+    width: 250px;
+    min-height: 250px;
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+
+  .about__image {
+    margin-bottom: 30px;
+    margin-right: 30px;
+    width: 80px;
+    height: 80px;
+    background-color: #63a73a;
+  }
+
+  .about__description {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .about {
+    padding-left: 70px;
+    padding-right: 0;
+  }
+
   .about__list {
     flex-direction: row;
     flex-wrap: nowrap;
@@ -34,5 +115,6 @@
 
   .about__item {
     width: 325px;
+    margin-right: 80px;
   }
 }
