--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -37,14 +37,30 @@
   flex-wrap: wrap;
 }
 
+.catalog__item {
+  padding: 35px;
+}
+
 @media (min-width: @tablet-width) {
   .catalog__item {
     background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+  }
+
+  .catalog__order {
+    width: 249px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .catalog__item {
-    background-color: #ffffff;
+    background-color: #f2f2f2;
+    margin: 40px;
+  }
+
+  .catalog__order {
+    width: 169px;
   }
 }
