--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,11 +1,72 @@
+.contacts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+
 .contacts__title {
+  display: block;
+  width: 50%;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  margin: 0;
+  padding-left: 20px;
+  box-sizing: border-box;
+  padding-bottom: 30px;
 }
 
 .contacts__text {
+  display: block;
+  width: 50%;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
+  margin: 0;
+  padding-bottom: 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts {
+    padding-top: 70px;
+    justify-content: space-between;
+  }
+
+  .contacts__title {
+    width: 35%;
+    font-size: 20px;
+    line-height: 25px;
+    padding-left: 70px;
+    box-sizing: border-box;
+    padding-bottom: 60px;
+  }
+
+  .contacts__text {
+    width: 25%;
+    font-size: 16px;
+    line-height: 20px;
+    padding-bottom: 30px;
+    padding-right: 70px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts {
+    width: 40%;
+  }
+
+  .contacts__title {
+    width: 50%;
+    padding-left: 70px;
+    box-sizing: border-box;
+    padding-bottom: 60px;
+  }
+
+  .contacts__text {
+    width: 40%;
+    box-sizing: border-box;
+    padding-bottom: 0;
+    padding-right: 60px;
+  }
 }
