--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,11 +1,18 @@
 .example {
   background-color: #f2f2f2;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .example__title {
   font-size: 36px;
   line-height: 60px;
   text-transform: uppercase;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .example__description {
@@ -16,17 +23,101 @@
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
 }
 
+.example__weight {
+  display: flex;
+  justify-content: center;
+  width: 37.5%;
+  padding: 10px 20px;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+/*fieldset {
+  position:relative;
+  padding-top:50px;
+}
+
+legend {
+  position:absolute;
+  top:27px;
+  left:18px;
+}​*/
 .example__legend {
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
   text-transform: none;
+  margin-bottom: -10px;
 }
 
 .example__text {
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
+  display: block;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .example {
+    padding: 0;
+    background-color: #ffffff;
+  }
+
+  .example__title {
+    font-size: 60px;
+    line-height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .example__description {
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .example__stats {
+    width: 50%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .example__text {
+    width: 40%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .example__title {
+    padding-left: 80px;
+    padding-right: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .example__description {
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+
+  .example__stats {
+    width: 30%;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+
+  .example__text {
+    width: 30%;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
 }
