--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,8 +1,13 @@
 .header {
+  position: relative;
   background-color: #ffffff;
   color: #444444;
   display: flex;
   flex-direction: column;
+}
+
+.header__logo {
+  padding: 12px 20px;
 }
 
 @media (min-width: @tablet-width) {
@@ -13,14 +18,16 @@
 
   .header__logo {
     width: 220px;
-  }
-
-  .navigation {
-    width: 500px;
+    padding: 20px 30px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .header {
+    justify-content: space-between;
+    flex-direction: flex-end;
+  }
+
   .header__logo {
     width: 245px;
   }
