--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,15 +1,19 @@
 .intro {
-  background-color: #63a73a;
+  background-color: #ffffff;
   color: #ffffff;
-  background-image: url("..index-background-mobile@1x.jpg");
-  width: 320px;
+  background-image: url("/img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+  width: 100%;
   margin: 0 auto;
 }
 
 .intro__slogan {
   margin: 0;
-  padding: 0;
   font-size: 36px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
   line-height: 36px;
 }
 
@@ -17,6 +21,7 @@
   margin: 0;
   padding: 0;
   text-transform: uppercase;
+  text-align: center;
   font-size: 14px;
   line-height: 18px;
 }
@@ -27,22 +32,103 @@
   color: #ffffff;
   font-size: 14px;
   line-height: 18px;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 280px;
   height: 40px;
-  text-align: center;
+  margin: 0 auto;
+}
+
+.intro__image {
+  display: block;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .intro {
     background-color: #ffffff;
+    background-image: none;
     color: #000000;
     width: 768px;
+  }
+
+  .intro__wrapper {
+    padding-left: 120px;
+    padding-right: 75px;
+  }
+
+  .intro__slogan {
+    text-align: left;
+    font-size: 60px;
+    line-height: 60px;
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: flex-start;
+  }
+
+  .intro__text {
+    font-size: 20px;
+    line-height: 20px;
+    display: flex;
+    justify-content: flex-start;
+    padding-bottom: 45px;
+  }
+
+  .intro__image {
+    width: 709px;
+    height: 609px;
+    position: relative;
+  }
+
+  .intro__link {
+    font-size: 20px;
+    line-height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 245px;
+    height: 52px;
+    margin: 0 auto;
+    position: absolute;
+    top: 330px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .intro {
-    width: 960px;
+    width: 100%;
+    color: #000000;
+    background-image: url("/img/index-background-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: right;
+    /*background-size: cover;
+    width: 100%;*/
+  }
+
+  .intro__slogan {
+    width: 50%;
+    font-size: 60px;
+    line-height: 60px;
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+
+  .intro__text {
+    padding-bottom: 40px;
+  }
+
+  .intro__image {
+    width: 552px;
+    height: 499px;
+  }
+
+  .intro__wrapper {
+    padding-left: 185px;
+  }
+
+  .intro__link {
+    top: 380px;
   }
 }
