--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,15 @@
 .footer {
+  width: 100%;
   background-color: #f2f2f2;
+}
+
+.footer__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer__logo {
@@ -11,11 +21,13 @@
 }
 
 @media (min-width: @tablet-width) {
-  .footer {
-    padding: 30px;
-  }
-
   .footer__wrapper {
+    width: 768px;
+    box-sizing: border-box;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,8 +42,9 @@
 }
 
 @media (min-width: @desktop-width) {
-  .footer {
-    padding-left: 110px;
-    padding-right: 110px;
+  .footer__wrapper {
+    width: 1300px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
