--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,59 +1,64 @@
 .contacts {
+  width: 100%;
+}
+
+.contacts__wrapper {
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .contacts__title {
   display: block;
-  width: 50%;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   margin: 0;
-  padding-left: 20px;
   box-sizing: border-box;
-  padding-bottom: 30px;
 }
 
 .contacts__text {
   display: block;
-  width: 50%;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
   margin: 0;
-  padding-bottom: 30px;
 }
 
 @media (min-width: @tablet-width) {
-  .contacts {
-    padding-top: 70px;
+  .contacts__wrapper {
+    padding-top: 60px;
     justify-content: space-between;
+    width: 768px;
+    padding-bottom: 60px;
+    padding-left: 70px;
+    padding-right: 70px;
   }
 
   .contacts__title {
     width: 35%;
     font-size: 20px;
     line-height: 25px;
-    padding-left: 70px;
     box-sizing: border-box;
-    padding-bottom: 60px;
   }
 
   .contacts__text {
     width: 25%;
     font-size: 16px;
     line-height: 20px;
-    padding-bottom: 30px;
-    padding-right: 70px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .contacts {
-    width: 40%;
+  .contacts__wrapper {
+    width: 1300px;
   }
 
   .contacts__title {
