--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,13 +1,20 @@
 .example {
+  width: 100%;
   background-color: #f2f2f2;
-  padding-left: 20px;
-  padding-right: 20px;
+}
+
+.example__wrapper {
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .example__title {
   font-size: 36px;
   line-height: 60px;
-  text-transform: uppercase;
+  text-transform: none;
   display: flex;
   justify-content: flex-start;
   margin: 0;
@@ -63,15 +70,16 @@ legend {
 
 @media (min-width: @tablet-width) {
   .example {
-    padding: 0;
     background-color: #ffffff;
+  }
+
+  .example__wrapper {
+    width: 768px;
   }
 
   .example__title {
     font-size: 60px;
     line-height: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
     padding-top: 50px;
     padding-bottom: 50px;
   }
@@ -79,45 +87,36 @@ legend {
   .example__description {
     font-size: 16px;
     line-height: 24px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   .example__stats {
     width: 50%;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   .example__text {
     width: 40%;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .example__wrapper {
+    width: 1300px;
+  }
+
   .example__title {
-    padding-left: 80px;
-    padding-right: 20px;
     padding-top: 50px;
     padding-bottom: 50px;
   }
 
   .example__description {
-    padding-left: 80px;
-    padding-right: 20px;
+    width: 50%;
   }
 
   .example__stats {
     width: 30%;
-    padding-left: 80px;
-    padding-right: 20px;
   }
 
   .example__text {
     width: 30%;
-    padding-left: 80px;
-    padding-right: 20px;
   }
 }
