--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,9 +1,16 @@
 .header {
+  width: 100%;
+}
+
+.header__wrapper {
+  box-sizing: border-box;
+  width: 320px;
   position: relative;
   background-color: #ffffff;
   color: #444444;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .header__logo {
@@ -11,7 +18,8 @@
 }
 
 @media (min-width: @tablet-width) {
-  .header {
+  .header__wrapper {
+    width: 768px;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -23,7 +31,8 @@
 }
 
 @media (min-width: @desktop-width) {
-  .header {
+  .header__wrapper {
+    width: 1300px;
     justify-content: space-between;
     flex-direction: flex-end;
   }
