--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -93,6 +93,7 @@
     width: 62%;
     background-color: #ffffff;
     color: #222222;
+    margin-left: 40px;
   }
 
   .navigation__toggle {
@@ -101,8 +102,8 @@
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav__wrapper {
-    width: 960px;
+  .navigation__wrapper {
+    width: 1300px;
   }
 
   .navigation {
