--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -65,7 +65,18 @@
 }
 
 @media (min-width: @desktop-width) {
+  .gift {
+    box-sizing: border-box;
+    width: 245px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
   .gift__wrapper {
-    width: 1300px;
+    width: auto;
+  }
+
+  .gift__link {
+    flex-direction: column;
   }
 }
