--- a/source/less/blocks/other_goods.less
+++ b/source/less/blocks/other_goods.less
@@ -90,8 +90,16 @@
     flex-direction: row;
     flex-wrap: nowrap;
   }
-    .other-goods__wrapper {
-    flex-grow: 2;
+
+  .other-goods__wrapper {
+    width: 1300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .other-goods__title {
+    width: 100%;
   }
 
   .other-goods__item {
@@ -102,5 +110,9 @@
 
   .other-goods__order {
     width: 245px;
+  }
+
+  .other-goods__list {
+    width: 895px;
   }
 }
