--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,11 +8,21 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  padding-top: 30px;
+  flex-wrap: wrap;
+}
+
+.contacts__info {
   padding-bottom: 30px;
+  padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.contacts__image {
+  width: 100%;
 }
 
 .contacts__title {
@@ -34,12 +44,15 @@
 
 @media (min-width: @tablet-width) {
   .contacts__wrapper {
-    padding-top: 60px;
     justify-content: space-between;
     width: 768px;
-    padding-bottom: 60px;
-    padding-left: 70px;
-    padding-right: 70px;
+  }
+
+  .contacts__info {
+    padding-bottom: 40px;
+    padding-top: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .contacts__title {
