--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,9 +1,10 @@
 .footer {
   width: 100%;
-  background-color: #f2f2f2;
 }
 
 .footer__wrapper {
+  background-color: #f2f2f2;
+  box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
   display: flex;
