--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,7 +1,7 @@
 .gift {
   width: 100%;
   background-color: #63a73a;
-  background-image: url("/img/gift-photo-mobile@1x.jpg");
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
