--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -6,7 +6,7 @@
 
 .intro__wrapper {
   box-sizing: border-box;
-  background-image: url("/img/index-background-mobile@1x.jpg");
+  background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: top;
   width: 320px;
@@ -124,7 +124,7 @@
   }
 
   .intro__wrapper {
-    background-image: url("/img/index-background-mobile@1x.jpg");
+    background-image: url("../img/index-background-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
     width: 1300px;
