--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -72,25 +72,25 @@
   }
 
   .about__item:nth-child(1) {
-    background-image: url("/img/1.png");
+    background-image: url("../img/1.png");
     background-position: 70% 30%;
     background-repeat: no-repeat;
   }
 
   .about__item:nth-child(2) {
-    background-image: url("/img/2.png");
+    background-image: url("../img/2.png");
     background-position: 70% 30%;
     background-repeat: no-repeat;
   }
 
   .about__item:nth-child(3) {
-    background-image: url("/img/3.png");
+    background-image: url("../img/3.png");
     background-position: 70% 30%;
     background-repeat: no-repeat;
   }
 
   .about__item:nth-child(4) {
-    background-image: url("/img/4.png");
+    background-image: url("../img/4.png");
     background-position: 70% 30%;
     background-repeat: no-repeat;
   }
