--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -67,6 +67,10 @@
     font-size: 16px;
     line-height: 20px;
   }
+
+  .contacts__image {
+    height: 385px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -86,5 +90,9 @@
     box-sizing: border-box;
     padding-bottom: 0;
     padding-right: 60px;
+  }
+
+  .contacts__image {
+    height: 405px;
   }
 }
