--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -18,9 +18,12 @@
 }
 
 @media (min-width: @tablet-width) {
+  .slider {
+    background-color: #f2f2f2;
+  }
+
   .slider__wrapper {
     width: 768px;
-    background-color: #f2f2f2;
     padding-left: 30px;
     padding-right: 30px;
   }
