мелкая сетка блоков без выделенного красным

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -8,15 +8,17 @@
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 30px;
 }
 
 .about__title {
+  font-weight: 400;
   font-size: 36px;
   line-height: 60px;
   display: flex;
   justify-content: flex-start;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 .about__description {
@@ -32,6 +34,9 @@
 }
 
 .about__image {
+  width: 150px;
+  height: 60px;
+  box-sizing: border-box;
   display: block;
   margin-bottom: 20px;
   margin-right: 20px;
