--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -107,8 +107,10 @@
   }
 
   .navigation {
+    z-index: 1;
     width: 50%;
     background-color: #63a73a;
+    background-color: transparent;
     color: #ffffff;
   }
 }
