--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "fonts/fonts.less";
 @import "variables.less";
 @import "blocks/intro.less";
+@import "blocks/background_desktop.less";
 @import "blocks/header.less";
 @import "blocks/nav.less";
 @import "blocks/site_list.less";
