--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -14,6 +14,7 @@
 }
 
 .footer__logo {
+  width: 320px;
   display: flex;
   justify-content: center;
   padding-top: 30px;
@@ -36,6 +37,7 @@
   }
 
   .footer__logo {
+    width: auto;
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
