--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -15,8 +15,15 @@
 }
 
 .gift__img {
+  margin: 0 auto;
+  display: block;
+  height: 60px;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.gift__img path {
+  fill: #ffffff;
 }
 
 .gift__text {
@@ -33,8 +40,8 @@
 
 @media (min-width: @tablet-width) {
   .gift__wrapper {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 85px;
+    padding-right: 120px;
     padding-top: 70px;
     padding-bottom: 70px;
   }
@@ -46,12 +53,15 @@
   }
 
   .gift__img {
+    margin: 0;
     height: 60px;
     padding-top: 0;
     padding-bottom: 0;
   }
 
   .gift__text {
+    width: 180px;
+    text-align: left;
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 0;
@@ -62,12 +72,26 @@
   .gift {
     box-sizing: border-box;
     width: 245px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 80px;
+    margin-right: 0px;
   }
 
   .gift__wrapper {
     width: auto;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  .gift__img {
+    margin: 0 auto;
+    display: block;
+  }
+
+  .gift__text {
+    padding-top: 30px;
+    text-align: center;
   }
 
   .gift__link {
