--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -31,6 +31,11 @@
 }
 
 @media (min-width: @desktop-width) {
+  /*.header {
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+  }*/
+
   .header__wrapper {
     width: 1300px;
     justify-content: space-between;
