--- a/source/less/blocks/other_goods.less
+++ b/source/less/blocks/other_goods.less
@@ -11,6 +11,7 @@
 }
 
 .other-goods__title {
+  font-weight: 400;
   margin: 0;
   font-size: 24px;
   line-height: 24px;
@@ -36,13 +37,25 @@
 }
 
 .other-goods__link {
+  font-weight: 400;
   color: #444444;
 }
 
 .other-goods__description {
+  width: 280px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
+}
+
+.other-goods__description td:nth-child(1) {
+  text-align: left;
+}
+
+.other-goods__description td:nth-child(2) {
+  text-align: right;
 }
 
 .other-goods__order {
@@ -66,6 +79,7 @@
   }
 
   .other-goods__item {
+    align-items: center;
     box-sizing: border-box;
     border: 1px solid #f2f2f2;
     width: 100%;
@@ -96,6 +110,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding-bottom: 90px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .other-goods__title {
@@ -106,6 +123,10 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .other-goods__order {
@@ -114,5 +135,22 @@
 
   .other-goods__list {
     width: 895px;
+    box-sizing: border-box;
+  }
+
+  .other-goods__item-title {
+    width: 185px;
+  }
+
+  .other-goods__description {
+    width: 285px;
+  }
+
+  .other-goods__description td:nth-child(1) {
+    text-align: left;
+  }
+
+  .other-goods__description td:nth-child(2) {
+    text-align: right;
   }
 }
