--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -10,23 +10,56 @@
   margin: 0 auto;
 }
 
+.programs__image {
+  z-index: 1;
+  position: absolute;
+}
+
+.programs__image--pro {
+  margin: -8px;
+  margin-top: 15px;
+}
+
+.programs__image--slim {
+  padding-left: 15px;
+}
+
 .programs__item {
+  position: relative;
   background-color: #f2f2f2;
   padding: 20px;
 }
 
-.programs__item:nth-child(1) {
+.programs__item--slim {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .programs__title {
+  font-weight: 400;
+  text-align: center;
   margin: 0;
   padding-top: 10px;
   padding-bottom: 10px;
   text-transform: uppercase;
   font-size: 24px;
   line-height: 38px;
+}
+
+.programs__title::before {
+  content: "";
+  position: absolute;
+  left: 20px;
+  top: 15px;
+  width: 60px;
+  height: 60px;
+  background-color: #63a73a;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+
+.programs__title--pro {
+  padding-left: 35px;
 }
 
 .programs__text {
@@ -42,6 +75,10 @@
   padding-top: 20px;
   text-transform: uppercase;
   color: #444444;
+}
+
+.programs__catalog span {
+  padding-left: 10px;
 }
 
 .programs__list {
@@ -69,13 +106,45 @@
   }
 
   .programs__title {
+    text-align: left;
     font-size: 36px;
     line-height: 37px;
   }
 
+  .programs__title--pro {
+    padding-left: 0;
+  }
+
+  .programs__image {
+    margin-left: 500px;
+    padding-top: 100px;
+  }
+
+  .programs__image--slim {
+    padding-left: 0;
+  }
+
+  .programs__image--pro {
+    margin-top: 0;
+  }
+
+  .programs__title::before {
+    content: "";
+    position: absolute;
+    left: 500px;
+    top: 90px;
+    width: 150px;
+    height: 150px;
+    background-color: #63a73a;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+  }
+
   .programs__text {
+    width: 380px;
     font-size: 16px;
     line-height: 24px;
+    border-bottom: none;
   }
 
   .programs__catalog {
@@ -95,14 +164,56 @@
     flex-direction: row;
   }
 
+  .programs__image {
+    margin-left: 0;
+    padding-top: 0;
+  }
+
+  .programs__image--pro {
+    margin: -8px;
+    margin-top: 15px;
+  }
+
+  .programs__image--slim {
+    padding-left: 15px;
+  }
+
+  .programs__title::before {
+    content: "";
+    position: absolute;
+    left: 40px;
+    top: 40px;
+    width: 80px;
+    height: 80px;
+    background-color: #63a73a;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+  }
+
   .programs__item {
     margin: 0;
     width: 50%;
   }
 
-  .programs__item:nth-child(1) {
+  .programs__item--slim {
     margin-right: 80px;
     margin-top: 0;
     margin-bottom: 0;
+  }
+
+  .programs__title {
+    text-align: center;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+  }
+
+  .programs__title--pro {
+    padding-left: 35px;
+  }
+
+  .programs__text {
+    width: auto;
   }
 }
