--- a/source/less/blocks/site_list.less
+++ b/source/less/blocks/site_list.less
@@ -85,6 +85,10 @@
     color: #ffffff;
   }
 
+  .site-list__link--color {
+    color: #000000;
+  }
+
   .site-list__item {
     margin-right: 0;
     color: #ffffff;
@@ -99,6 +103,9 @@
     padding-right: 31px;
     padding-left: 31px;
   }
+
+
+
 
   .site-list__item a[href] {
     &:hover {
