--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,3 +1,7 @@
+.slider {
+  padding-top: 40px;
+}
+
 .slider__wrapper {
   width: 320px;
   margin: 0 auto;
@@ -6,10 +10,30 @@
   box-sizing: border-box;
 }
 
+.slider__toggles {
+  width: 200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.slider__toggles::before {
+  position: absolute;
+  width: 50%;
+  height: 6px;
+  border-radius: 10px;
+  background-color: #68b738;
+}
+
 .slider__toggle {
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  border: none;
+  background-color: transparent;
+  padding: 0;
 }
 
 .slider__image {
@@ -30,7 +54,15 @@
 }
 
 @media (min-width: @desktop-width) {
+  .slider {
+    width: 650px;
+  }
+
   .slider__wrapper {
-    width: 1300px;
+    width: 650px;
+  }
+
+  .slider__image {
+    margin: 0;
   }
 }
