--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -4,15 +4,30 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
+  border-top: 1px solid #f2f2f2;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.view-more__plus {
+  font-size: 100px;
+  line-height: 100px;
+  color: #d3d3d3;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .view-more__title {
+  font-weight: 400;
+  display: block;
+  text-align: center;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
 }
 
 .view-more__text {
+  text-align: center;
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
@@ -40,7 +55,13 @@
   }
 
   .view-more__button {
+    margin-top: 80px;
     width: 249px;
+  }
+
+  .view-more__plus {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 
   .view-more__title {
@@ -59,6 +80,10 @@
 @media (min-width: @desktop-width) {
   .view-more {
     width: 245px;
+  }
+
+  .view-more__plus {
+    padding-top: 10px;
   }
 
   .view-more__button {
