--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -32,6 +32,7 @@
 }
 
 .catalog__text {
+  width: 140px;
   font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
@@ -69,10 +70,6 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
-}
-
-.catalog__text {
-  width: 140px;
 }
 
 .catalog__text td:nth-child(1) {
@@ -127,7 +124,6 @@
   }
 
   .catalog__text {
-    width: auto;
     width: 255px;
     font-size: 16px;
     line-height: 16px;
@@ -169,7 +165,7 @@
     width: 170px;
   }
 
-  .catalog__text td:nth-child(1) {
+  .catalog__text td {
     height: 35px;
   }
 
