--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -82,6 +82,10 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .form__headline {
@@ -134,7 +138,9 @@
 .form__list {
   padding-top: 20px;
   margin: 0;
-  padding: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+  padding-right: 0;
   margin-bottom: 10px;
   list-style: none;
 }
@@ -158,29 +164,11 @@
 
   white-space: nowrap;
 
-  -webkit-clip-path: inset(100%);
+  /*-webkit-clip-path: inset(100%);*/
 
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-.form__title::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 27px;
-  height: 23px;
-  background-image: url(../img/checkbox-off.svg);
-  background-repeat: no-repeat;
-}
-
-.form__comment {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 @media (min-width: @tablet-width) {
@@ -252,7 +240,6 @@
     padding-top: 25px;
     padding-bottom: 5px;
   }
-
 }
 
 @media (min-width: @desktop-width) {
