--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -73,7 +73,7 @@
     box-sizing: border-box;
     width: 245px;
     margin-left: 80px;
-    margin-right: 0px;
+    margin-right: 0;
   }
 
   .gift__wrapper {
