--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -109,6 +109,18 @@
     color: #000000;
   }
 
+  .intro::before {
+    content: "";
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    position: absolute;
+    background-color: #63a73a;
+    width: 720px;
+    height: 696px;
+    top: 0;
+    right: 0;
+  }
+
   .intro__slogan {
     width: 420px;
     font-size: 60px;
