--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -26,7 +26,10 @@
 }
 
 .contacts__image {
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: 320px;
+  height: 360px;
 }
 
 .contacts__title {
@@ -80,7 +83,8 @@
   }
 
   .contacts__image {
-    height: 385px;
+    width: 767px;
+    height: 400px;
   }
 }
 
@@ -107,6 +111,7 @@
   }
 
   .contacts__image {
-    height: 405px;
+    width: 1440px;
+    height: 400px;
   }
 }
