--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -22,6 +22,7 @@
 }
 
 .about__description {
+  width: 200px;
   margin: 0;
   font-family: "Arial", sans-serif;
   display: block;
@@ -34,10 +35,12 @@
 }
 
 .about__image {
-  width: 150px;
+  width: 60px;
   height: 60px;
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
   margin-right: 20px;
   background-color: #63a73a;
