--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -5,6 +5,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
 }
 
 .gift__wrapper {
@@ -39,6 +44,15 @@
 }
 
 @media (min-width: @tablet-width) {
+  .gift {
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px auto;
+    }
+  }
+
   .gift__wrapper {
     padding-left: 85px;
     padding-right: 120px;
@@ -74,6 +88,12 @@
     width: 245px;
     margin-left: 80px;
     margin-right: 0;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
   }
 
   .gift__wrapper {
