--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -17,6 +17,11 @@
   padding: 12px 20px;
 }
 
+.header__logo-image {
+  width: 200px;
+  height: 50px;
+}
+
 @media (min-width: @tablet-width) {
   .header__wrapper {
     width: 768px;
@@ -27,6 +32,11 @@
   .header__logo {
     width: 220px;
     padding: 20px 30px;
+  }
+
+  .header__logo-image {
+    width: 192px;
+    height: 60px;
   }
 }
 
@@ -44,5 +54,10 @@
 
   .header__logo {
     width: 245px;
+  }
+
+  .header__logo-image {
+    width: 215px;
+    height: 82px;
   }
 }
