--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -5,8 +5,6 @@
 .slider__wrapper {
   width: 320px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
   box-sizing: border-box;
 }
 
@@ -39,6 +37,8 @@
 .slider__image {
   display: block;
   margin: 0 auto;
+  width: 311px;
+  height: 232px;
 }
 
 @media (min-width: @tablet-width) {
@@ -51,6 +51,11 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+
+  .slider__image {
+    width: 690px;
+    height: 517px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -58,11 +63,17 @@
     width: 650px;
   }
 
+  .slider__toggles {
+    padding-top: 330px;
+  }
+
   .slider__wrapper {
     width: 650px;
   }
 
   .slider__image {
+    top: 0;
+    position: absolute;
     margin: 0;
   }
 }
