--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -75,10 +75,10 @@
   padding-top: 20px;
   text-transform: uppercase;
   color: #444444;
-}
-
-.programs__catalog span {
-  padding-left: 10px;
+  background-image: url("../img/icon-right-arrow-long.svg");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: 30px;
 }
 
 .programs__list {
