--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -41,6 +41,34 @@
   height: 232px;
 }
 
+.slider__image--after {
+  display: none;
+}
+
+.before-after__toggle {
+  position: relative;
+  width: 82px;
+  height: 12px;
+  z-index: 1;
+  background-color: #ffffff;
+  border: 1px solid #dfdfdf;
+  border-radius: 5px;
+  top: 3px;
+}
+
+.before-after__toggle::after {
+  position: absolute;
+  content: "";
+  z-index: 5;
+  width: 35px;
+  max-width: 70px;
+  height: 6px;
+  background-color: #68b738;
+  border-radius: 2px;
+  top: 3px;
+  left: 6px;
+}
+
 @media (min-width: @tablet-width) {
   .slider {
     background-color: #f2f2f2;
@@ -55,6 +83,25 @@
   .slider__image {
     width: 690px;
     height: 517px;
+  }
+
+  .before-after__toggle {
+    width: 428px;
+    height: 6px;
+    border: 0;
+    margin-top: 5px;
+    background-color: #dcdcdc;
+  }
+
+  .before-after__toggle::after {
+    width: 8px;
+    height: 8px;
+    background-color: #68b738;
+    border-radius: 50%;
+    border: 16px solid #ffffff;
+    top: -14px;
+    left: 214px;
+    box-shadow: 0 2px 5px 0 #cdcdcd;
   }
 }
 
@@ -75,5 +122,6 @@
     top: 0;
     position: absolute;
     margin: 0;
+    right: 0;
   }
 }
