--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,6 +10,21 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
+.social__icon--vk {
+  width: 22px;
+  height: 12px;
+}
+
+.social__icon--inst {
+  width: 16px;
+  height: 16px;
+}
+
+.social__icon--fcb {
+  width: 10px;
+  height: 19px;
+}
+
 .social__item {
   margin: 20px;
 }
