--- a/source/less/blocks/view_more.less
+++ b/source/less/blocks/view_more.less
@@ -9,9 +9,9 @@
 }
 
 .view-more__plus {
-  font-size: 100px;
-  line-height: 100px;
-  color: #d3d3d3;
+  padding-bottom: 25px;
+  width: 30px;
+  height: 30px;
   display: block;
   margin: 0 auto;
   text-align: center;
@@ -48,6 +48,7 @@
 
 @media (min-width: @tablet-width) {
   .view-more {
+    margin-top: 120px;
     width: 324px;
     box-sizing: border-box;
     padding: 40px;
@@ -62,6 +63,8 @@
   .view-more__plus {
     padding-top: 20px;
     padding-bottom: 20px;
+    width: 60px;
+    height: 60px;
   }
 
   .view-more__title {
