--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "../css/normalize.css";
+@import "normalize.less";
 @import "fonts/fonts.less";
 @import "variables.less";
 @import "blocks/intro.less";
